Improve 2FA verification page messaging

--- a/view/user/totp/setup.templ
+++ b/view/user/totp/setup.templ
@@ -5,7 +5,7 @@ import (
     "github.com/fossyy/filekeeper/types"
 )
 
-templ content(title string, qrcode string, code string, user types.User) {
+templ content(title string, qrcode string, code string, user types.User, msg types.Message) {
     @layout.Base(title){
         @layout.Navbar(user)
         <main class="container mx-auto px-4 py-12 md:px-6 md:py-16 lg:py-10">
@@ -50,6 +50,28 @@ templ content(title string, qrcode string, code string, user types.User) {
               </div>
               <div class="rounded-lg border rounded-lg bg-muted p-6bg-card text-card-foreground shadow-sm mt-5" data-v0-t="card">
                 <div class="p-6 space-y-6">
+                switch msg.Code {
+                    case 0:
+                        <div class="flex items-center p-4 mb-4 text-sm text-red-800 rounded-lg bg-red-50" role="alert">
+                          <svg class="flex-shrink-0 inline w-4 h-4 me-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
+                            <path d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5ZM9.5 4a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3ZM12 15H8a1 1 0 0 1 0-2h1v-3H8a1 1 0 0 1 0-2h2a1 1 0 0 1 1 1v4h1a1 1 0 0 1 0 2Z"/>
+                          </svg>
+                          <span class="sr-only">Info</span>
+                          <div>
+                            <span class="font-medium">Error!</span> {msg.Message}
+                          </div>
+                        </div>
+                    case 1:
+                        <div class="flex items-center p-4 mb-4 text-sm text-green-800 rounded-lg bg-green-50" role="alert">
+                          <svg class="flex-shrink-0 inline w-4 h-4 me-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
+                            <path d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5ZM9.5 4a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3ZM12 15H8a1 1 0 0 1 0-2h1v-3H8a1 1 0 0 1 0-2h2a1 1 0 0 1 1 1v4h1a1 1 0 0 1 0 2Z"/>
+                          </svg>
+                          <span class="sr-only">Info</span>
+                          <div>
+                            <span class="font-medium">Success!</span> {msg.Message}
+                          </div>
+                        </div>
+                }
                   <div class="flex items-center justify-center">
                     <img
                       src={"data:image/png;base64," + qrcode}
@@ -62,7 +84,7 @@ templ content(title string, qrcode string, code string, user types.User) {
                   </div>
                   <div class="mt-6 space-y-2">
                     <p class="font-medium">Backup Code:</p>
-                    <div class="rounded-md bg-background px-4 py-2 text-sm font-mono text-muted-foreground">12345-67890</div>
+                    <div class="rounded-md bg-background px-4 py-2 text-sm font-mono text-muted-foreground">----|----</div>
                     <p class="font-medium">TOTP Secret:</p>
                     <div class="rounded-md bg-background px-4 py-2 text-sm font-mono text-muted-foreground">
                       {code}
@@ -94,6 +116,6 @@ templ content(title string, qrcode string, code string, user types.User) {
     }
 }
 
-templ Main(title string, qrcode string, code string, user types.User) {
-	@content(title, qrcode, code, user)
+templ Main(title string, qrcode string, code string, user types.User, msg types.Message) {
+	@content(title, qrcode, code, user, msg)
 }
